--- a/submit1-10.css
+++ b/submit1-10.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.headerline {
+header {
   width: 100%;
   height: 50px;
   background-color: #ff9a4b;
@@ -63,7 +63,7 @@ section:last-child {
   color: white;
 }
 
-.footerline {
+footer {
   width: 100%;
   height: 50px;
   background-color: #aaaaaa;
